# loop

./: .clang-format  .gitignore  LICENSE  README.md  delete_compiled_files.sh  env.sh  ideas.txt  spec.md  test.py  test2.py
loop_compiler/: setup.py
loop_compiler/loop_compiler/: full_passes.py  loopc.py  looprun.py  looptest.py
loop_compiler/loop_compiler/loop_ast/: base.py  expr.py  module.py  repr.py  stmt.py
loop_compiler/loop_compiler/passes/: compiler.py  grammar.lark  loop_parser.py  lower_ast_after.py  lower_ast_before.py  read_file.py  semantic_check.py  write_chunk.py
loop_compiler/loop_compiler/util/: default_error_listener.py  emmiter.py  error_listener.py
loop_lsp/: setup.py
loop_lsp/src/: loop_lsp.py
loop_vscode/: README.md  package-lock.json  package.json  vsc-extension-quickstart.md
loop_vscode/src/: extension.js
loop_vscode/syntaxes/: loop.tmLanguage.json
loopc/: compiler.py  emmiter.py  error_listener.py  full_passes.py  grammar.lark  loop_ast.py  loop_parser.py  loopc.py  looprun.py  looptest.py  main.py  repr.py  test.loop
loopc/loop_ast/: base.py  expr.py  module.py  repr.py  stmt.py
loopc/looptest/fail/: dunder.loop  exportNotTopLevel.loop  functionParamDup.loop  functionWrongArgumentsCall.code  functionWrongArgumentsCall.loop  varRedef.loop
loopc/looptest/fail/looptest/fail/: dunder.code  importNonExistent.code
loopc/looptest/pass/: binary.loop  comparison.loop  dicts.loop  equality.code  equality.loop  functions.loop  globalVar.code  globalVar.loop  if.loop  importAs.code  importAs.loop  importFrom.code  importFrom.loop  importedModule.code  localVar.code  localVar.loop  print.loop  shadowingLocal.loop  unary.loop  while.loop
loopc/looptest/pass/looptest/pass/: binary.code  comparison.code  dicts.code  functions.code  if.code  importFrom.code  importedModule.code  print.code  shadowingLocal.code  unary.code  while.code
loopc/passes/: compiler.py  compiler_old.py  grammar.lark  loop_parser.py  lower_ast.py  read_file.py  semantic_check.py  semantic_check_old.py  write_chunk.py
loopc/sandbox/: sandbox.loop  sandbox2.loop
loopc/util/: default_error_listener.py  emmiter.py  error_listener.py
loopc_haskell/: AST.hs  CHANGELOG.md  CheckerMonad.hs  Main.hs  SemanticCheck.hs  loopc-haskell.cabal
loopc_haskell/.emacs_saves/: AST.hs~  CheckerMonad.hs~  Main.hs~  SemanticCheck.hs~
looptest/: all_import.loop  math.loop  test.loop  util.loop
looptest/.loop_compiled/: math.loop.code  test.loop.code  util.loop.code
looptest/fail/: exportNotTopLevel.loop  functionParamDup.loop  functionWrongArgumentsCall.loop  importNonExistent.loop  letChange.loop  listOutOfRange.loop
looptest/pass/: class.loop  classInherit.loop  classSuperMethod.loop  closureChangeValue.loop  closureDeep.loop  closureMany.loop  closureValueOrVariable.loop  comparison.loop  dicts.loop  equality.loop  exceptions.loop  functions.loop  globalVar.loop  importedModule.loop  let.loop  list.loop  localVar.loop  shadowingLocal.loop  simpleClosure.loop
loopvm/: CMakeLists.txt  out.json
loopvm/c/src/: main.c
loopvm/c/src/Loop/: Chunk.c  Chunk.h  Common.h  Error.c  Error.h  Filesystem.c  Filesystem.h  HashTable.c  HashTable.h  MemoryManager.c  MemoryManager.h  Object.c  Object.h  ObjectType.c  ObjectType.h  Opcode.c  Opcode.h  Value.c  Value.h  VirtualMachine.c  VirtualMachine.h
loopvm/c/src/Loop/Objects/: BoundMethod.c  BoundMethod.h  Class.c  Class.h  Closure.c  Closure.h  Dictionary.c  Dictionary.h  Function.c  Function.h  Instance.c  Instance.h  List.c  List.h  Module.c  Module.h  String.c  String.h  Upvalue.c  Upvalue.h
loopvm/src/: chunk.zig  errors.zig  instructions.zig  main.c  main.zig  objects.zig  value.zig  virtual_machine.zig
loopvm/src/Loop/: Chunk.c  Chunk.h  Common.h  Error.c  Error.h  Filesystem.c  Filesystem.h  Filesystem_UNIX.c  Filesystem_WINDOWS.c  HashTable.c  HashTable.h  MemoryManager.c  MemoryManager.h  Object.c  Object.h  ObjectType.c  ObjectType.h  Opcode.c  Opcode.h  PrintFlags.h  Util.c  Util.h  Value.c  Value.h  VirtualMachine.c  VirtualMachine.h
loopvm/src/Loop/Objects/: BoundMethod.c  BoundMethod.h  Class.c  Class.h  Closure.c  Closure.h  Dictionary.c  Dictionary.h  Function.c  Function.h  Instance.c  Instance.h  List.c  List.h  Module.c  Module.h  String.c  String.h  Upvalue.c  Upvalue.h
loopvmzig/: out.json
loopvmzig/src/: chunk.zig  instructions.zig  main.zig  memory_manager.zig  objects.zig  value.zig
